<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".HomepageActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/homepage_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/hello_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textColor="@color/dim_gray"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/homepage_option_layout"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/homepage_option_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hello_message"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/create_button"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@drawable/red_frame"
                android:drawableTop="@drawable/add_file"
                android:onClick="createButtonClick"
                android:paddingTop="10dp"
                android:text="@string/create_new"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/join_button"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/blue_frame"
                android:drawableTop="@drawable/log_in"
                android:onClick="joinButtonClick"
                android:paddingTop="10dp"
                android:text="@string/join_current"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/create_button"
                tools:ignore="UsingOnClickInXml" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/setting_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/rename"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:onClick="settingButtonClick"
            tools:ignore="UsingOnClickInXml"
            app:layout_constraintTop_toBottomOf="@+id/homepage_option_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/leave_check_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/shadow"
        android:visibility="invisible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/leave_check_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_square_frame_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/leave_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/leave_app"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/leave_app_yes_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/sky_blue"
                android:onClick="leaveYes"
                android:text="@string/yes"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/leave_app_no_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/leave_question"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/leave_app_no_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:background="@color/transparent"
                android:onClick="leaveNo"
                android:text="@string/no"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/leave_app_yes_button"
                app:layout_constraintTop_toBottomOf="@+id/leave_question"
                tools:ignore="UsingOnClickInXml" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>